--- a/README
+++ b/README
@@ -2,3 +2,5 @@ tsc --init: // run project
 kill PORT: sudo kill -9 $(sudo lsof -t -i:8000)
 
 mv .env.example .env
+
+postinstall: is action happens while an app is being used   
